tests/paczka1/fuzzy1/92040101.err
Error in line 3: i6JUinx A92 1,9
Error in line 7: i0ZFQrrrN4 A337 56,7
Error in line 21: GRf4hwM A337 56,2
Error in line 26: A337 A712 59,8
Error in line 29: i6JUinx S794 72,4
Error in line 35: Bgu15jlGIn A92 52,9
